# Python_c_extension

./: README.md
C_Ext/: Setup.local  spammodule.c
setuptools_ext/: pyproject.toml
