# https://setuptools.pypa.io/en/latest/userguide/ext_modules.html
# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spammodule"  # as it would appear on PyPI
version = "0.42"

[tool.setuptools]
ext-modules = [
  {name = "spam", sources = ["spammodule.c"]}
]